--- a/IntentFiler/app/src/main/AndroidManifest.xml
+++ b/IntentFiler/app/src/main/AndroidManifest.xml
@@ -15,14 +15,7 @@
         android:theme="@style/Theme.IntentFiler">
         <activity
             android:name=".MainActivity2"
-            android:exported="false"
-            tools:ignore="AppLinkUrlError">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="https" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
